<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_gps_btn"
        android:icon="@drawable/ic_gps_on"
        android:orderInCategory="1"
        android:title="@string/gpsstat_str"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/home_wifi_btn"
        android:icon="@drawable/ic_wifi_on"
        android:orderInCategory="2"
        android:title="@string/wifi_str"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/ic_help"
        android:title="@string/help_str"
        android:id="@+id/home_help_btn"
        app:showAsAction="withText"
        android:orderInCategory="3"
        />
    <item
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_str"
        android:id="@+id/home_settings_btn"
        app:showAsAction="withText"
        android:orderInCategory="4"
        />
    <item
        android:icon="@drawable/ic_logout"
        android:title="@string/logout_str"
        android:id="@+id/home_logout_btn"
        app:showAsAction="withText"
        android:orderInCategory="5"
        />
</menu>